# loom

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
loom/: __init__.py  main.py
loom/core/: models.py  orchestrator.py
loom/eval/: __init__.py  eval_dataset.json  eval_providers.py
loom/providers/: __init__.py  anthropic.py  anthropic_sync.py  base.py  google.py  google_sync.py  openai.py  openai_sync.py  openrouter_sync.py  sync_base.py
loom/utils/: cache.py  converters.py  errors.py  keys.py  storage.py
prompts/: initial_prompt.md
tests/: conftest.py  test_cli_help.py  test_converters.py  test_errors.py  test_google_batch.py  test_keys.py  test_storage.py
