[project]
name = "loom"
version = "0.1.0"
description = "CLI tool for LLM batch processing across OpenAI, Anthropic, and Google"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "openai>=1.50",
    "google-genai>=0.3",
    "rich>=13.0",
]

[project.scripts]
loom = "loom.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loom"]
