[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-batch"
version = "0.2.0"
description = "Weave batch LLM jobs across OpenAI, Anthropic, and Google."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jan Nehring" }]
keywords = ["llm", "batch", "openai", "anthropic", "gemini", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pandas>=2",
    "python-dotenv>=1",
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=0.3",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "build>=1",
]

[project.scripts]
loom = "loom.main:app"

[project.urls]
Homepage = "https://github.com/jannehring/loom"
Repository = "https://github.com/jannehring/loom"
Issues = "https://github.com/jannehring/loom/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["loom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
